[gd_scene load_steps=31 format=2]

[ext_resource path="res://arts/resources/nano.png" type="Texture" id=1]
[ext_resource path="res://objects/culpits/packager_culpit.gd" type="Script" id=2]
[ext_resource path="res://arts/ui/theme.tres" type="Theme" id=3]
[ext_resource path="res://arts/ui/panel.png" type="Texture" id=4]
[ext_resource path="res://arts/VFX/Circle.png" type="Texture" id=5]
[ext_resource path="res://arts/light.png" type="Texture" id=6]
[ext_resource path="res://arts/font/BarlowCondensed-SemiBold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://systems/DamageComponent.tscn" type="PackedScene" id=8]
[ext_resource path="res://arts/Shader/white_icon.tres" type="Shader" id=9]
[ext_resource path="res://arts/culpits/packager.png" type="Texture" id=10]
[ext_resource path="res://scripts/AudioRandomizer.gd" type="Script" id=11]
[ext_resource path="res://sounds/entity.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/machine.wav" type="AudioStream" id=13]

[sub_resource type="Animation" id=4]
resource_name = "active"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "build"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 0.329877, 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "finished"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 28.2179

[sub_resource type="CircleShape2D" id=3]
radius = 171.026

[sub_resource type="ShaderMaterial" id=19]
shader = ExtResource( 9 )

[sub_resource type="DynamicFont" id=18]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.403922 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 0 ), 0.0, 2.77321, 0, 0, Vector2( 1, 0.595455 ), -2.32727, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 150.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 70.59
angular_velocity_random = 1.0
orbit_velocity = 0.1
orbit_velocity_random = 1.0
radial_accel = -300.0
radial_accel_random = 0.23
scale = 0.1
scale_curve = SubResource( 6 )
color = Color( 0.607843, 0.835294, 0.6, 1 )
color_ramp = SubResource( 9 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.0496894, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.490196, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.07697, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.58
scale_curve = SubResource( 17 )
color_ramp = SubResource( 16 )

[node name="Packager_Culpit" type="StaticBody2D" groups=["culpit"]]
collision_layer = 8
collision_mask = 0
input_pickable = true
script = ExtResource( 2 )
type = "packager"

[node name="Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
autoplay = "build"
anims/active = SubResource( 4 )
anims/build = SubResource( 2 )
anims/finished = SubResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ControlPos" type="Position2D" parent="."]
position = Vector2( 36, 0 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.5, -0.5 )
scale = Vector2( 2.45, 2.45 )
pause_particles = false
process_parent = true
physics_process_parent = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="Icon" type="Sprite" parent="Sprite"]
modulate = Color( 0.756863, 0.678431, 0.356863, 1 )
material = SubResource( 19 )
position = Vector2( -22.2065, -0.800007 )
scale = Vector2( 0.283871, 0.283871 )
z_index = 1
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -252.0
margin_top = -51.0
margin_right = 248.0
margin_bottom = 49.0
rect_min_size = Vector2( 500, 100 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 18 )
text = "0"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 10
process_material = SubResource( 7 )
texture = ExtResource( 4 )

[node name="Particles2D2" type="Particles2D" parent="."]
scale = Vector2( 1.14142, 1.14142 )
emitting = false
amount = 2
process_material = SubResource( 10 )
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 6 )
texture_scale = 1.05
energy = 0.7
mode = 2
shadow_enabled = true

[node name="DamageComponent" parent="." instance=ExtResource( 8 )]
health_max = 50

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Sounds" type="Node2D" parent="."]

[node name="Entity" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 12 )
bus = "Sounds"
script = ExtResource( 11 )
pitch_low = 0.872
ptch_high = 1.126
volume_low = -20
volume_high = -10

[node name="Enable" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 13 )
bus = "Sounds"
script = ExtResource( 11 )
pitch_low = 0.872
ptch_high = 1.126
volume_low = -20
volume_high = -10

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
